--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,7 @@ jobs:
           locale: "US"
           fail_on_error: true
           filter_mode: nofilter
+          ignore: "cancellable,cancelled" # needs to be ignored because glib has a function called cancellable
       - uses: dominikh/staticcheck-action@v1.3.0
         with:
           install-go: false
