--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Setup GStreamer
         id: setup_gstreamer
         uses: blinemedical/setup-gstreamer@v1.4.0
+        with:
+          version: "1.24.9"
       - name: checkout
         uses: actions/checkout@v3
       - uses: actions/setup-go@v5
