--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,16 @@ jobs:
         id: setup_gstreamer
         uses: blinemedical/setup-gstreamer@v1.4.0
         with:
-          version: "1.24.9"
+          version: "1.24.10"
+          gstreamerOptions: |-
+            -Dauto_features=disabled
+            -Dgpl=enabled
+            -Dexamples=disabled
+            -Dgtk_doc=disabled
+            -Dintrospection=disabled
+            -Dlibav=disabled
+            -Dpython=disabled
+            -Dvaapi=disabled
       - name: checkout
         uses: actions/checkout@v3
       - uses: actions/setup-go@v5
